css/wordl_style.css
/* FULL */
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    display: flex;
    width: 100%;
    font-size: 18px;
    min-height: 100vh;
    flex-direction: column;
    background-color: #ebebee;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main {
    flex: 1 0 auto;
    align-items: center;
}

#logo {
    max-width: 500px;
    height: auto;
}

footer {
    padding: 0;
    min-height: 30px;
    background-color: #b1e6ff;
}

footer .footerbox {
    padding: 8px;
}

footer .contacts {
    min-width: 50%;
    padding: 12px;
    display: flex;
    text-align: left;
    flex-direction: column;
    align-items: flex-start;
}

footer .contacts p {
    text-align: left !important;
}

footer .contacts .head {
    font-size: 28px;
    font-weight: bold;
    text-align: center;
    text-decoration: underline;
    color: #ffffff;
}

footer .copyright {
    padding: 2px;
    width: 100%;
    color: #ffffff;
    text-align: center;
    background-color: #0051ff;
}

a:link {
    color: #ffffff;
}

a:visited {
    color: #cfcfcf;
}

.tiles {
    text-transform: uppercase;
    user-select: none;
    cursor: no-drop;
    width: 435px;
    height: 520px;
    display: flex;
    flex-direction: column;
    padding: 10px;  
    margin: 30px auto;
    /* background-color: #b072ca7f; */
    justify-content: space-around;
}

.tiles-row {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.tile {
    width: 70px; /* You can adjust this value as needed */
    height: 70px; /* Set height to the same percentage as width */
    padding: 1px;
    display: flex;
    font-size: 32px;
    flex-wrap: wrap;
    font-weight: bold;
    text-align: center;
    align-items: center;
    align-content: center;
    flex-direction: column;
    justify-content: center;
    border-radius: 7px;
    border: 2px solid #ffffff;
    background-color: #aaaaaa;
}

header {
    height: 70px;
    display: flex;
    flex-wrap: wrap;
    min-width: 100%;
    color: #ffffff;
    flex-direction: row;
    align-items: stretch;
    align-content: center;
    background-color: #0051ff;
    justify-content: space-between;
}

header .logo {
    padding: 10px;
    font-size: 40px;
    font-weight: bolder;
    align-content: center;
}

header .menu-btn {
    padding: 14px;
    text-align: end;
    font-size: 26px;
    margin-right: 10px;
}

.menu {
    display: none;
    width: 100%;
    top: 70px;
    color: #ffffff;
    position: absolute;
    background: #008ddd;
}

.menu ul {
    list-style: none;
    padding: 0px 20px;
}

.menu ul li {
    margin: 3px;
    color: #ffffff;
}

.menu ul li a {
    display: block;
    padding: 8px;
    color: #ffffff;
    font-weight: 700;
    text-decoration: none;
    transition: all 0.5s ease-in-out;
}

.menu ul li a:hover{
    background-color: #006c9e;
}

.keyboard {
    margin: 30px auto;
    background-color: #fcf0e4;
    border-radius: 5px;
    box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, 0.5);
    display: grid;
    gap: 6px;
    grid-template-columns: repeat(30, 1.2rem);
    grid-template-rows: repeat(3, 3rem);
    padding: 6px;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
}
.keyboard__key {
    max-width: 100%;
    border: none;
    border-radius: 5px;
    font-weight: bolder;
    cursor: pointer;
    display: flex;
    font-family: "Source Code Pro", monospace;
    outline: none;
    padding: 12px;
}
.keyboard__key:hover, .keyboard__key:focus {
    font-weight: 700;
}
.keyboard__key:active, .keyboard__key.active {
    box-shadow: none;
    background-color: #3f0ea2;
    color: #fff;
    font-weight: 400;
    cursor: grabbing;
    transform: translate(2px, 2px);
}
.keyboard__key--general {
    background-color: #7a96f2;
    box-shadow: 3px 3px 0 0 #1411a9;
}
.keyboard__key--special {
    background-color: #b031eb;
    box-shadow: 3px 3px 0 0 #3f0960;
}

/* 4. Grid columns */
.col-span-1 {
    align-items: center;
    grid-column: span 1;
    justify-content: center;
}

.col-span-2 {
    align-items: center;
    grid-column: span 2;
    justify-content: center;
}

.col-span-3 {
    align-items: center;
    grid-column: span 3;
    justify-content: center;
}

.col-span-4 {
    align-items: center;
    grid-column: span 4;
    justify-content: center;
}

.col-span-5 {
    align-items: center;
    grid-column: span 5;
    justify-content: center;
}

.scheme-2 {
    border: 2px solid #1da413 !important;
    background-color: #00ff3c !important;
}

.scheme-1 {
    border: 2px solid #a49d13 !important;
    background-color: #fff700 !important;
}

.options {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.opt-btn {
    padding: 4px;
    font-size: 18px;
    font-weight: 600;
    color: #ffffff;
    border-radius: 4px;
    border: 1px solid #3f0960;
    background-color: #b031eb;
}

.opt-btn:hover {
    background-color: #8b1dbe;
}

.opt-btn:focus {
    background-color: #581478;
}

@media (max-width: 575px) {
    .collapse-mid {
        display: none;
    }
    .container {
        width: 80%;
    }
    #logo {
        max-width: 200px;
        height: 200px;
    }
}

@media (min-width: 576px) {
    .collapse-mid {
        display: none;
    }
    .container {
        width: 85%;
    }
    #logo {
        max-width: 250px;
        height: 250px;
    }
}

@media (min-width: 768px) {
    .collapse-mid {
        display: inline;
    }
    .container {
        width: 90%;
    }
    #logo {
        max-width: 300px;
        height: 300px;
    }
}

@media (min-width: 992px) {
    .collapse-mid {
        display: inline;
    }
    .container {
        width: 95%;
    }
    #logo {
        max-width: 350px;
        height: 350px;
    }
}

@media (min-width: 1200px) {
    .collapse-mid {
        display: inline;
    }
    .container {
        width: 97%;
    }
    #logo {
        max-width: 400px;
        height: 400px;
    }
}

